--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -186,9 +186,9 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg text-center my-auto">
                         <h2 class="text-white mt-3">Find us Here</h2>
-                        <p class="text-white mb-0 bi-instagram"> bearsbakery.dmv</p>
-                        <p class="text-white mb-0 bi-facebook"> bearsbakery.dmv23</p>
-                        <p class="text-white mb-0 bi-envelope-at"> bearsbakery.dmv@gmail.com</p>
+                        <p class="text-white mb-0 bi-instagram"> <a class="text-white" href="https://www.instagram.com/bearsbakery.dmv">bearsbakery.dmv</a></p>
+                        <p class="text-white mb-0 bi-facebook"> <a class="text-white" href="https://www.facebook.com/bearsbakery.dmv23">bearsbakery.dmv23</a></p>
+                        <p class="text-white mb-0 bi-envelope-at"> <a class="text-white" href="mailto:bearsbakery.dmv@gmail.com">bearsbakery.dmv@gmail.com</a></p>
                     </div>
                      <div class="col-md-2 mt-5 mb-5 px-0">
                          <img class="img-fluid" src="assets/img/logo.png" alt="Logo" />
@@ -207,6 +207,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
